# traffic-congestion-analysis-system

./: .gitattributes  .gitignore  PROJECT_DESIGN_OUTLINE.md  PROJECT_STATUS.md  README.md  SUBMISSION_GUIDE.md  SUBMISSION_PARTS.md  pyproject.toml  requirements-dashboard.txt  requirements.txt  run_dashboard.py  streamlit_app.py
app/: dashboard_utils.py  streamlit_app.py
config/: m2.json  m3.json  phase3.json
data/dashboard/: congestion_heatmap.parquet  train_reference.parquet
docs/: ACCEPTANCE_CRITERIA.md  DASHBOARD_RUNBOOK.md  DASHBOARD_TRACK_SPEC.md  DEVELOPMENT_PLAN.md  MODEL_TRACK_SPEC.md
notebooks/: traffic_congestion_course_report.ipynb
reports/: M2_ACCEPTANCE_REPORT.md  M3_ACCEPTANCE_REPORT.md  M4_ACCEPTANCE_REPORT.md  PHASE3A_ACCEPTANCE_REPORT.md  phase3_manifest.json
reports/data_audit/: DATA_AUDIT_REPORT.md  DATA_DICTIONARY.md  DATA_SOURCE_REGISTRY.md  all_sensor_zero_runs.csv  audit_summary.json  file_checksums.csv  sensor_quality_audit.csv  time_interval_counts.csv  top_zero_coverage_timestamps.csv
reports/data_cleaning/: DATA_CLEANING_REPORT.md  cleaning_summary.json
reports/eda/: EDA_REPORT.md  eda_summary.json
reports/eda_preparation/: EDA_PREPARATION_PLAN.md
scripts/: build_course_notebook.py  build_dashboard_data.py  package_course_submission.py  package_split_submission.py  restore_submission_parts.py
src/app/: artifacts.py  (+3 more)
tests/: test_course_notebook.py  test_dashboard_artifacts.py  test_dashboard_risk.py  test_dashboard_utils.py  test_data_pipeline.py  test_eda.py  test_model_dataset.py  test_modeling.py  test_run_dashboard.py
(+31 files in other folders)
