[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-congestion-analysis"
version = "0.2.0"
description = "METR-LA historical traffic congestion analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.10",
  "matplotlib>=3.8",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=18.0",
]

[project.scripts]
traffic-phase3 = "traffic_congestion.phase3:main"
traffic-m2 = "traffic_congestion.m2:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
